# vm-3.8x

./: CMakeLists.txt  README.md  VM_Analyze.sln
emux86/: 1.py  1.txt  CMakeLists.txt  CMakePresets.json  emu.h  emux86.vcxproj  emux86.vcxproj.filters  main.cpp  triton.lib
src/: asm2llvmir.h  entry.cpp  main.cpp  vmprotect64.ll
